--- a/Trash/css/index.html
+++ b/Trash/css/index.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Box</title>
+  </head>
 
-</head>
-
-<body>
-    <div style="width: 100%; height: 180px; border-width: 2px; border-style: solid;"></div>
-    <div style="width: 100%; height: 100px; border-width: 2px;border-style: solid;"></div>
-    <div style="width: 100%; height:500px; border-width:2px; border-style:solid;"></div>
-    <div style="width:100%; height:100px;border-width:2px;border-style: solid;"></div>
-</body>
-
+  <body>
+    <div
+      style="width: 100%; height: 180px; border-width: 2px; border-style: solid"
+    ></div>
+    <div
+      style="width: 100%; height: 100px; border-width: 2px; border-style: solid"
+    ></div>
+    <div
+      style="width: 100%; height: 500px; border-width: 2px; border-style: solid"
+    ></div>
+    <div
+      style="width: 100%; height: 100px; border-width: 2px; border-style: solid"
+    ></div>
+  </body>
 </html>
