--- a/Trash/dom.html
+++ b/Trash/dom.html
@@ -1,29 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>JavaScript</title>
     <script>
-        function prnt() {
-            let z = document.getElementById("Rishav")
-            z.innerHTML = "Hey Buddy";
-        }
+      function wap() {
+        // document.getElementById("wap").innerHTML = "Rishav";
+
+        let x = document.getElementById("wap");
+        x.innerHTML = "Rishav Agarwal";
+      }
     </script>
-</head>
+  </head>
+  <body>
+    <p id="wap"></p>
 
-<body>
-    <h1 id="Rishav"></h1>
-    <button onclick="prnt()">Click Me</button>
-
-    <!-- <p id="result"></p>
+    <h1 id="result"></h1>
+    <button onclick="wap()">Click Me</button>
     <script>
-        document.getElementById("result").innerHTML = "Rishav"
-    </script> -->
-</body>
-
-
-
+      //   document.getElementById("result").innerHTML = "Rishav";
+    </script>
+  </body>
 </html>
