--- a/js/ch17/index.html
+++ b/js/ch17/index.html
@@ -20,7 +20,7 @@
     <h1>Image Effect</h1>
     <div id="page">
       <img
-        src="./DSC_1773-removebg-preview.png"
+        src="https://images.unsplash.com/photo-1559629819-638a8f0a4303?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"
         alt="Boy Image"
         width="600"
         height="396"
